<resources>
    <string name="app_name">VoterInformation</string>
    <string name="signin">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="address">123 Street, Athens, GA</string>
    <string name="birthday">Birthday **/**/****</string>
    <string name="email">Email</string>
    <string name="registerlabel">Register</string>
    <string name="confirmPassword">Re-enter Password</string>
    <string name="next">Next</string>
    <string name="myOfficials">Officials</string>
    <string name="title_activity_main_menu">MainActivityMenu</string>
    <string name="title_home">Home</string>
    <string name="title_contests">Contests</string>
    <string name="title_congress">Congress</string>
    <string name="title_polls">Polls</string>
    <string name="senate_button">Refresh</string>
    <string name="title_activity_main_bottom">MainActivityBottom</string>
    <string name="splash">My Republic</string>

    <string name="createPoll">Create Poll</string>
    <string name="takePoll">View Polls</string>


    //main menu
    <string name="register_vote">Register To Vote</string>

    <string name="location_vote">Voting Location</string>

    <string name="local_vote">Local Information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
