<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#beff4444">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/us_capital_dome"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/redBackground">


        <EditText
            android:id="@+id/voterEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="84dp"
            android:layout_marginStart="84dp"
            android:layout_marginTop="55dp"
            android:background="@color/colorAccent"
            android:elevation="2dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="2dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="2dp"
            android:stateListAnimator="@null"
            android:translationZ="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/voterPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="84dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="30dp"
            android:paddingBottom="2dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="2dp"
            android:background="@color/colorAccent"
            android:elevation="2dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:stateListAnimator="@null"
            android:translationZ="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/voterBirthday" />

        <EditText
            android:id="@+id/voterPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="84dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="30dp"
            android:paddingBottom="2dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="2dp"
            android:background="@color/colorAccent"
            android:elevation="2dp"
            android:ems="10"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:stateListAnimator="@null"
            android:translationZ="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/voterPassword" />

        <EditText
            android:id="@+id/voterBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="84dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="30dp"
            android:paddingBottom="2dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="2dp"
            android:background="@color/colorAccent"
            android:elevation="2dp"
            android:ems="10"
            android:hint="@string/birthday"
            android:inputType="date"
            android:stateListAnimator="@null"
            android:translationZ="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/voterAddress" />

        <Button
            android:id="@+id/touchVoterRegister"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="148dp"
            android:layout_marginStart="148dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:elevation="2dp"
            android:onClick="touchVoterRegister"
            android:stateListAnimator="@null"
            android:text="@string/register"
            android:textColor="@color/colorAccent"
            android:translationZ="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/voterPassword2" />

        <EditText
            android:id="@+id/voterUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="84dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:elevation="2dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:stateListAnimator="@null"
            android:translationZ="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/voterEmail" />

        <EditText
            android:id="@+id/voterAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="84dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="30dp"
            android:paddingBottom="2dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="2dp"
            android:background="@color/colorAccent"
            android:elevation="2dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:stateListAnimator="@null"
            android:translationZ="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/voterUsername" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>