<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainViewController">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainViewController">

        <Button
            android:id="@+id/mainRegister2"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/colorAccent"
            android:elevation="2dp"
            android:stateListAnimator="@null"
            android:translationZ="2dp"
            android:text="@string/register_vote"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <Button
            android:id="@+id/mainRegister3"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="75dp"
            android:background="@color/colorAccent"
            android:elevation="2dp"
            android:stateListAnimator="@null"
            android:text="@string/location_vote"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationZ="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainRegister2" />

        <Button
            android:id="@+id/mainRegister"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="75dp"
            android:background="@color/colorAccent"
            android:elevation="2dp"
            android:stateListAnimator="@null"
            android:text="@string/local_vote"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationZ="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainRegister3" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>