<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b15858">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/us_capital_dome"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/redBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/touchGoToVoterRegister"
            android:layout_width="280dp"
            android:layout_height="50dp"

            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="71dp"
            android:layout_marginTop="39dp"
            android:background="@color/colorPrimary"
            android:elevation="2dp"
            android:onClick="touchGoToVoterRegister"
            android:stateListAnimator="@null"
            android:text="@string/register"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            android:translationZ="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/touchLogin" />

        <Button
            android:id="@+id/touchLogin"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="71dp"
            android:layout_marginTop="43dp"
            android:background="@color/colorPrimary"
            android:elevation="2dp"
            android:onClick="touchLogin"
            android:stateListAnimator="@null"
            android:text="@string/signin"

            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            android:translationZ="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPassword" />


        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="76dp"
            android:background="@color/colorAccent"
            android:elevation="2dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingBottom="2dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="2dp"
            android:stateListAnimator="@null"
            android:textColor="#323232"
            android:textSize="24sp"
            android:textStyle="bold"
            android:translationZ="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="52dp"
            android:background="@color/colorAccent"
            android:elevation="2dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="2dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="2dp"
            android:stateListAnimator="@null"
            android:textColor="#323232"
            android:textSize="24sp"
            android:textStyle="bold"
            android:translationZ="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginUsername" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>